[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["limyel <limyel@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tortoise-orm = "^0.16.17"
aiosqlite = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
