[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["limyel <limyel@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiosqlite = "^0.16.0"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
peewee = "^3.14.0"
aiofiles = "^0.6.0"
python-multipart = "^0.0.5"
pyjwt = "^2.0.0"
peewee_async = "^0.7.1"
aiomysql = "^0.0.21"
cryptography = "^3.4.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
